# open-banking-api

./: Cargo.toml
src/: lib.rs
src/api/: oauth.rs
src/types/: endpoint.rs  mod.rs  oauth.rs
src/types/oauth/: authorize.rs  mod.rs  revoke.rs  token.rs
