[package]
name = "open-banking-api"
version = "0.1.0"
edition = "2021"
authors = ["Xanthorrhizol <xanthorrhizol@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.20"

[features]
prod = []
test = []
default = ["test"]
