[package]
name = "open-banking-api"
version = "0.1.0"
edition = "2021"
authors = ["Xanthorrhizol <xanthorrhizol@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_repr = "0.1.16"
thiserror = "1.0.48"

[features]
prod = []
test = []
default = ["test"]
